--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "homepage": "https://github.com/kura-lab/php-kdb",
     "authors": [
       {
-        "name": "kura-lab",
-        "email": "none"
+        "name": "kura",
+        "email": "mkurahay@gmail.com"
       }
     ],
     "require-dev": {
